# opsPilot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  RULES.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest_output.txt  pytest_single.txt
.github/workflows/: ci.yml
app/: main.py  worker.py
app/core/: config.py  encryption.py  events.py  exceptions.py  logging.py  metrics.py  permissions.py  registry.py  security.py  sentry.py
app/core/tasks/: __init__.py  ai_tasks.py  billing_tasks.py
app/db/: base.py  redis.py  session.py
app/integrations/: __init__.py
app/integrations/communications/: __init__.py  email.py  push.py  sms.py
app/integrations/payments/: __init__.py  flutterwave.py  paystack.py
app/integrations/whatsapp/: __init__.py  client.py  service.py  webhook.py
app/middleware/: cors.py  logging.py  maintenance.py  rate_limit.py  request_id.py
app/modules/admin/: __init__.py  dependencies.py  repository.py  routes.py  schemas.py  service.py
app/modules/ai/: __init__.py  dependencies.py  models.py  rag.py  repository.py  routes.py  schemas.py  service.py
app/modules/analytics/: __init__.py  dependencies.py  routes.py  service.py
app/modules/api_keys/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/audit/: __init__.py  events.py  models.py  routes.py  schemas.py  service.py
app/modules/auth/: __init__.py  dependencies.py  events.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/billing/: __init__.py  models.py  paystack_client.py  repository.py  routes.py  schemas.py  service.py
app/modules/businesses/: __init__.py  dependencies.py  events.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/customers/: __init__.py  dependencies.py  events.py  models.py  repository.py  routes.py  schemas.py  service.py
app/modules/feature_flags/: __init__.py  dependencies.py  models.py  repository.py  schemas.py
app/modules/metering/: __init__.py  models.py  repository.py  schemas.py  service.py
app/modules/notifications/: __init__.py  dependencies.py  events.py  models.py  routes.py  (+3 more)
app/shared/: __init__.py  base_repository.py  dependencies.py  pagination.py  response.py
app/websocket/: auth.py  broadcaster.py  connection.py  events.py  manager.py  routes.py
docker/: Dockerfile  prometheus.yml
docker/kong/: kong.yml
docs/: COMMANDS.md  PROJECT_SCOPE.md  backend_structure.md
migrations/: env.py
migrations/versions/: .gitkeep  05dfc82d6d7f_add_pgvector_extension.py  39ac1e823fed_add_super_admin_role_and_soft_delete.py  3a528661ceea_add_phase_3_tables.py  3e43bf6a651f_add_apikey_and_update_auditlog.py  71148ca9b15e_add_phase_10_models.py  8cd821e5f04a_create_workflows_tables.py  953eed12f59b_add_ai_models.py  d8bda6ba8e6e_add_index_to_invoices_business_id.py
tests/: conftest.py  test_admin.py  test_ai_orchestration.py  test_feature_flags.py  test_integrations.py  test_metering.py  test_phase3.py  test_websocket.py  test_workflows.py
(+25 files in other folders)
