[tool.poetry]
name = "opspilot-backend"
version = "0.1.0"
description = "AI-powered business operations platform for SMEs"
authors = ["OpsPilot Team <team@opspilot.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.30.0"}
gunicorn = "^21.2.0"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.30"}
asyncpg = ">=0.29.0"
alembic = ">=1.13.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.9"
redis = {extras = ["hiredis"], version = ">=5.0.0"}
pydantic = ">=2.7.0"
pydantic-settings = ">=2.3.0"
email-validator = ">=2.1.0"
httpx = ">=0.27.0"
python-dateutil = ">=2.9.0"
orjson = ">=3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.0"
mypy = ">=1.10.0"
black = ">=24.4.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B008", "E712", "N818"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
